; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c__clk_can_use_parent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx1/extr_clock.c__clk_can_use_parent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type opaque

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.clk**, i32, %struct.clk*)* @_clk_can_use_parent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_clk_can_use_parent(%struct.clk** %0, i32 %1, %struct.clk* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.clk**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.clk*, align 8
  %8 = alloca i32, align 4
  store %struct.clk** %0, %struct.clk*** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.clk* %2, %struct.clk** %7, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %24, %3
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ult i32 %10, %11
  br i1 %12, label %13, label %27

13:                                               ; preds = %9
  %14 = load %struct.clk*, %struct.clk** %7, align 8
  %15 = load %struct.clk**, %struct.clk*** %5, align 8
  %16 = load i32, i32* %8, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds %struct.clk*, %struct.clk** %15, i64 %17
  %19 = load %struct.clk*, %struct.clk** %18, align 8
  %20 = icmp eq %struct.clk* %14, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %13
  %22 = load i32, i32* %8, align 4
  store i32 %22, i32* %4, align 4
  br label %30

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load i32, i32* %8, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %8, align 4
  br label %9

27:                                               ; preds = %9
  %28 = load i32, i32* @EINVAL, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %27, %21
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
